# ToDoList-all-in-one

./: CMakeLists.txt  MaterialeProgetto.docx  QT richieste http  ToDoList all-in-one.pptx  api google calendar  client_secret_1034786735866-o2d6ot6i3mvvrvt2rck9qent1a32odnb.apps.googleusercontent.com.json  how to sell oauth2 online (fast)  infoPDS.txt  main.cpp  mainwindow.cpp  mainwindow.h  shareCalendar
ToDoList/: CMakeLists.txt  api google calendar  api.cpp  api.h  calendar.cpp  calendar.h  event.cpp  event.h  main.cpp  mainwindow.cpp  mainwindow.h  network.cpp  network.h  parser.cpp  parser.h  readme.txt
build-progetto_2-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-progetto_2-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-967e827dc00ba34da5cf.json  cmakeFiles-v1-64e34b3a67e20203254e.json  codemodel-v2-2adfd1965c7ffd85ed13.json  index-2021-10-28T15-42-36-0306.json  target-progetto_2-Debug-4dc19a5c2e73feca8313.json  target-progetto_2_autogen-Debug-77e2ed438eae70ff45da.json  target-progetto_2_autogen_timestamp_deps-Debug-60f8a050fa6139f74e2c.json
build-progetto_2-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/progetto_2_autogen/: deps
build-progetto_2-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/progetto_2_autogen/EWIEGA46WW/: moc_notepad.cpp  moc_notepad.cpp.d
build-progetto_2-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/progetto_2_autogen/include/: ui_notepad.h
progetto_2/: CMakeLists.txt  main.cpp  notepad.cpp  notepad.ui
